RESOLVED FIXED 120633
[CSSRegions] Pseudo-elements as regions should not be exposed to JS
https://bugs.webkit.org/show_bug.cgi?id=120633
Summary [CSSRegions] Pseudo-elements as regions should not be exposed to JS
Mihnea Ovidenie
Reported 2013-09-03 06:32:09 PDT
At least not until we properly implement the Region interface: http://dev.w3.org/csswg/css-regions/#the-region-interface
Attachments
Patch (11.06 KB, patch)
2013-09-03 06:40 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2013-09-03 06:40:06 PDT
WebKit Commit Bot
Comment 2 2013-09-03 07:42:20 PDT
Comment on attachment 210367 [details] Patch Clearing flags on attachment: 210367 Committed r154982: <http://trac.webkit.org/changeset/154982>
WebKit Commit Bot
Comment 3 2013-09-03 07:42:23 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.