[CSSRegions] Pseudo-elements as regions should not be exposed to JS https://bugs.webkit.org/show_bug.cgi?id=120633

Reviewed by Andreas Kling.

Source/WebCore:

Until we properly implement the Region interface (http://dev.w3.org/csswg/css-regions/#the-region-interface)
for pseudo-elements, we should not return these as regions in JS.

Tests: fast/regions/get-regions-by-content-pseudo.html
       fast/regions/webkit-named-flow-get-regions-pseudo.html

* dom/WebKitNamedFlow.cpp:
(WebCore::WebKitNamedFlow::firstEmptyRegionIndex): Skip pseudo-elements as regions here too,
otherwise we may get an index that cannot be used with getRegions().
(WebCore::WebKitNamedFlow::getRegionsByContent):
(WebCore::WebKitNamedFlow::getRegions):

LayoutTests:

Add tests with pseudo-elements as regions checking the following API:
WebKitNamedFlow::getRegions(), WebKitNamedFlow::getRegionsByContent()
Because we do not return the pseudo-elements as regions in the region list,
i modified WebKitNamedFlow::firstEmptyRegionIndex to skip these regions too.

* fast/regions/get-regions-by-content-pseudo-expected.txt: Added.
* fast/regions/get-regions-by-content-pseudo.html: Added.
* fast/regions/webkit-named-flow-get-regions-pseudo-expected.txt: Added.
* fast/regions/webkit-named-flow-get-regions-pseudo.html: Added.


Canonical link: https://commits.webkit.org/138607@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154982 268f45cc-cd09-0410-ab3c-d52691b4dbfc